refact: updated project

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-	"name": "SNS_test",
+	"name": "aws_sns_localstack",
 	"version": "1.0.0",
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "node ./index.js"
 	},
 	"dependencies": {
 		"aws-sdk": "^2.1192.0",
