feat: added SNS functional sources

--- a/.env.development.local
+++ b/.env.development.local
@@ -5,7 +5,8 @@ AWS_ACCESS_KEY_ID='mock'
 AWS_SECRET_ACCESS_KEY_ID='mock'
 AWS_MESSAGE_GROUP_ID='Group1'
 
-# AWS SQS
-QUEUE_NAME='BOOKS_QUEUE.fifo'
-QUEUE_URL='http://localhost:4566/'
-QUEUE_FULL_URL='http://localhost:4566/000000000000/'
+# AWS SNS
+TOPIC_NAME='NOTIFICATIONS_TOPIC.fifo'
+TOPIC_ARN='arn:aws:sns:us-east-1:'
+TOPIC_FULL_ARN='arn:aws:sns:us-east-1:000000000000:'
+TOPIC_URL='http://localhost:4566/'
