--- a/.env.development.local
+++ b/.env.development.local
@@ -10,3 +10,6 @@ TOPIC_NAME='NOTIFICATIONS_TOPIC.fifo'
 TOPIC_ARN='arn:aws:sns:us-east-1:'
 TOPIC_FULL_ARN='arn:aws:sns:us-east-1:000000000000:'
 TOPIC_URL='http://localhost:4566/'
+
+# AWS SQS
+QUEUE_URL='http://localhost:4566/000000000000/BOOKS_QUEUE.fifo'
