chore: changed fifo topic to standard

--- a/.env.development.local
+++ b/.env.development.local
@@ -6,7 +6,7 @@ AWS_SECRET_ACCESS_KEY_ID='mock'
 AWS_MESSAGE_GROUP_ID='Group1'
 
 # AWS SNS
-TOPIC_NAME='NOTIFICATIONS_TOPIC.fifo'
+TOPIC_NAME='NOTIFICATIONS_TOPIC'
 TOPIC_ARN='arn:aws:sns:us-east-1:'
 TOPIC_FULL_ARN='arn:aws:sns:us-east-1:000000000000:'
 TOPIC_URL='http://localhost:4566/'
